Re-implemented group collapsible and (dbl)click on option item options. Improved group collapse handle UI. Fixed an issue when filtered items change selection state.

--- a/css/jquery-multiselect-2.0.css
+++ b/css/jquery-multiselect-2.0.css
@@ -11,7 +11,9 @@
 .uix-multiselect .ui-widget-header .uix-search { float:right; height:14px; font-size:80%; }
 .uix-multiselect .uix-list-container { position:relative; overflow:auto; -webkit-touch-callout: none; -webkit-user-select: none; -khtml-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none; }
 .uix-multiselect .uix-list-container .ui-priority-secondary { padding-right:0; }
-.uix-multiselect .group-element { padding-left:0;  white-space:nowrap; overflow:hidden; }
+.uix-multiselect .group-element { position:relative; padding-left:0;  white-space:nowrap; overflow:hidden; }
+.uix-multiselect .group-element-collapsable { padding-left:16px; }
+.uix-multiselect .group-element span.collapse-handle { position:absolute; margin-top:-8px; top:50%; left:0; }
 .uix-multiselect .group-element .label { margin:0 3px;  white-space:nowrap; overflow:hidden; }
 .uix-multiselect .group-element .ui-icon { float:left; cursor:pointer; }
 .uix-multiselect .option-element, .dragged-element { cursor:pointer; }
